--- a/_data/metadata.yaml
+++ b/_data/metadata.yaml
@@ -8,7 +8,7 @@ description: The Bio2Byte Tools, published as B2BTools, is a suite of sequence-b
 keywords: B2BTools, post-translational modifications, Bioinformatics, Alphafold
 name: Assess protein dynamics & post-translational modifications
 # lookup at https://spdx.org/licenses/
-license: CC-BY-4.0
+license: https://spdx.org/licenses/CC-BY-4.0.html
 author:
 - "@type": Person
   name: Adrián Díaz
